fixed misaligned card title

--- a/src/components/Card/CardList.module.scss
+++ b/src/components/Card/CardList.module.scss
@@ -124,15 +124,13 @@ $cardHeight: 332px;
   }
 
   .cardLine {
-    display: flex;
-    justify-content: space-between;
     margin-top: 10px;
     font-size: 14px;
-    align-items: flex-start;
+    text-align: left;
 
     .collectionRow {
       display: flex;
-      align-items: flex-end;
+      align-items: center;
       font-weight: 500;
       font-size: 16px;
       a {
